fix(Pagiantion): adjust dark mode colors for default variant

--- a/packages/themes/src/morpheme/_pagination.dark.scss
+++ b/packages/themes/src/morpheme/_pagination.dark.scss
@@ -1,9 +1,9 @@
 .dark {
   .v-pagination {
     /* item */
-    --v-pagination-item-bg-color: var(--color-gray-true-800);
+    --v-pagination-item-bg-color: var(--color-gray-true-700);
     --v-pagination-item-text-color: var(--color-gray-true-200);
-    --v-pagination-item-border-color: var(--color-gray-true-800);
+    --v-pagination-item-border-color: var(--color-gray-true-700);
 
     /* item active */
     --v-pagination-item-active-bg-color: var(--color-primary-500);
@@ -11,7 +11,7 @@
     --v-pagination-item-active-text-color: var(--color-gray-true-200);
 
     /* item hover */
-    --v-pagination-item-hover-bg-color: var(--color-gray-true-700);
+    --v-pagination-item-hover-bg-color: var(--color-gray-true-600);
     --v-pagination-item-hover-text-color: var(--color-gray-true-200);
 
     /* item disabled */
